# SandBox

./: ai_in_geotechnical_engineering.md  app.py  blixtunnel_backfill_freezing_assessment.py  blixtunnel_backfill_freezing_assessment_cylindrical.py  blixtunnel_backfill_freezing_assessment_transient.py  crewai_docs.json  crewai_getting_started.py  crewai_reference.md  doc_scraper.py  dolphin_mesh.msh  drucker_prager_viz.py  gmsh_first.py  google_genai_test.ipynb  inverse_problem.py  inverse_problem_HTPF.py  linear_regression.ipynb  mohr_coulomb_visualization.py  rectangle_with_hole.msh  t19.msh  t2.msh
app/: Dockerfile  llama_index_test.py  requirements.txt  trig_plot_app.py
trip_planner_yb/: README.md  pyproject.toml
trip_planner_yb/src/trip_planner_yb/: crew.py  main.py
